# pandagraph

./: .gitignore  LICENSE  README.md  demo.py  requirements.txt  setup.cfg
demo/: demo_mands.py  pandagraph_demo_df.py  test_data.py
src/pandagraph/: __init__.py  pandagraph.py
tests/python/: test_pandagraph.py
