[metadata]
name = pandagraph-mgrazebrook
version = 0.0.1
author = Michael Grazebrook
author_email = pandagraph@Grazebrook.com
description = "Turns a function returning pandas.DataFrame into a GraphQL API"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mgrazebrook/pandagraph
project_urls =
    Bug Tracker = https://github.com/mgrazebrook/pandagraph/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
